plang/testing/logs/false-incorrect/72/program72.p.p
lNO (wrDg (rk sDc29 yo (p (F) (Y1fhM) (oSDkD) (odS (rhvL (fAe) K (B0vFT) (I6)) WbVT jIS83))) XGHY) :- hvEB wLy (gKJH lJoza) (LK8) R, iqV.


qP (MTr).
dnj :- i d0W.


sB1 (x7T (W)).


mrDn :- ((h271d, j1r X; (mbqgd jD))), (voeB7 (oy uGIfg (TRP)); xwM H (uHlQC); uj (ktqX nV) Iy KW l; nmV0s), zwdAi (etcmD) (nZgKE (R) (qK8 c (ALES7)) Qsq9 gYXj).

? t LnZY zAdzF, (((b3 ET (GC), xjk (KQ) MDs (C) pi))).
